# proofcart

./: .env  .env.example  API_DOCUMENTATION.md  BLOCKCHAIN_COMPLETE.md  BLOCKCHAIN_INTEGRATION.md  BLOCKCHAIN_STATUS.md  COMPLETE_SUMMARY.md  DEMO_QUICK_REFERENCE.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  E2E_TEST_REPORT.md  FRONTEND_BACKEND_WIRING.md  INTASEND_INTEGRATION_GUIDE.md  LOGIN_CREDENTIALS.md  PROJECT_ABSTRACT.md  PROJECT_README.md  PROJECT_STATUS.md  PROVENANCE_DASHBOARD_COMPLETE.md  QR_SYSTEM_DOCUMENTATION.md  QUICK_START.md  README.md  SELLER_IDENTITY_IMPLEMENTATION.md  WIRING_STATUS.md  create_redmi_listing.py  demo_verification.py  generate_qr.py  index.html  package-lock.json  package.json  redmi-nft-metadata.json  setup_redmi_nft.py  vite.config.ts
backend/: .env  .env.example  Procfile  README.md  db.sqlite3  db.sqlite3.backup  manage.py  requirements.txt
backend/proofcart/: __init__.py  settings.py  urls.py  wsgi.py
blockchain/: README.md
blockchain/icp-nft/: Cargo.toml  README.md  dfx.json
blockchain/solana-escrow/: Cargo.toml  README.md
blockchain/solana-escrow/src/: lib.rs
icp-nft/: .env  Cargo.toml  deploy.sh  dfx.json
solana-escrow/: Anchor.toml  deploy.sh
src/: App.tsx  index.css
src/components/: CartIcon.tsx  EscrowFlow.tsx  Footer.tsx  Header.tsx  Notifications.tsx  ProductCard.tsx  QRScanner.tsx  SellerTrustBadge.tsx  VerifiedBadge.tsx
src/contexts/: AppStateContext.tsx  AuthContext.tsx  CartContext.tsx  appStateValue.ts
src/lib/: api.ts  config.ts  envConfig.ts
src/pages/: BecomeSeller.tsx  Cart.tsx  (+12 more)
(+77 files in other folders)
